// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./StartTrialModal.stories SixtyDays 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      data-base-ui-portal=""
      data-slot="dialog-portal"
      id="_r_2_"
    >
      <div
        aria-hidden="true"
        data-base-ui-inert=""
        role="presentation"
        style="position: fixed; inset: 0; user-select: none;"
      />
      <div
        aria-hidden="true"
        class="bg-backdrop supports-backdrop-filter:backdrop-blur-xs fixed inset-0 z-[var(--z-overlay)] duration-100 data-open:animate-in data-closed:animate-out data-open:fade-in-0 data-closed:fade-out-0 data-starting-style:opacity-0 data-ending-style:opacity-0 data-closed:pointer-events-none"
        data-base-ui-inert=""
        data-open=""
        data-slot="dialog-overlay"
        role="presentation"
        style="user-select: none;"
      />
      <span
        data-base-ui-focus-guard=""
        data-type="inside"
        role="button"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
      <div
        aria-labelledby="base-ui-_r_3_"
        class="data-open:animate-in data-closed:animate-out data-closed:fade-out-0 data-open:fade-in-0 data-closed:zoom-out-95 data-open:zoom-in-95 data-starting-style:opacity-0 data-ending-style:opacity-0 fixed top-[50%] left-[50%] z-[var(--z-overlay)] w-full -translate-x-1/2 -translate-y-1/2 rounded-xl shadow-lg duration-200 max-w-[764px] p-6 bg-card"
        data-base-ui-focusable=""
        data-open=""
        data-slot="dialog-content"
        id="_r_0_"
        role="dialog"
        style="--nested-dialogs: 0;"
        tabindex="-1"
      >
        <div
          class="flex flex-col gap-6"
        >
          <h2
            class="text-foreground m-0 scroll-m-20 text-2xl font-semibold leading-[28.8px] tracking-normal"
            data-slot="typography"
            data-variant="h3"
            id="base-ui-_r_3_"
          >
            Start your 
            60
            -day free trial of Safe Pro
          </h2>
          <div
            class="text-card-foreground overflow-hidden text-sm has-[>img:first-child]:pt-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl group/card flex flex-col bg-muted-secondary bg-[linear-gradient(90deg,color-mix(in_srgb,var(--mint)_40%,var(--muted-secondary)),color-mix(in_srgb,var(--mint)_8%,var(--muted-secondary)))] gap-4 py-4 rounded-lg"
            data-radius="lg"
            data-size="sm"
            data-slot="card"
            data-surface="default"
            data-variant="brand"
          >
            <div
              class="px-6 group-data-[size=sm]/card:px-4 group-data-[size=lg]/card:px-8 group-data-[size=none]/card:px-0"
              data-slot="card-content"
            >
              <ul
                class="m-0 flex list-none p-0 flex-row gap-4 justify-between"
                data-orientation="horizontal"
                data-slot="list"
              >
                <li
                  class="flex items-center gap-2 py-0.5 w-[200px]"
                  data-size="sm"
                  data-slot="list-item"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-lock-keyhole-open size-4 shrink-0 text-badge-dot-success"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="16"
                      r="1"
                    />
                    <rect
                      height="12"
                      rx="2"
                      width="18"
                      x="3"
                      y="10"
                    />
                    <path
                      d="M7 10V7a5 5 0 0 1 9.33-2.5"
                    />
                  </svg>
                  <span
                    class="m-0 text-xs leading-4 font-medium"
                    data-slot="typography"
                    data-variant="paragraph-mini-medium"
                  >
                    All Pro features unlocked, no billing details needed upfront.
                  </span>
                </li>
                <li
                  class="flex items-center gap-2 py-0.5 w-[200px]"
                  data-size="sm"
                  data-slot="list-item"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-bell-ring size-4 shrink-0 text-badge-dot-success"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.268 21a2 2 0 0 0 3.464 0"
                    />
                    <path
                      d="M22 8c0-2.3-.8-4.3-2-6"
                    />
                    <path
                      d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
                    />
                    <path
                      d="M4 2C2.8 3.7 2 5.7 2 8"
                    />
                  </svg>
                  <span
                    class="m-0 text-xs leading-4 font-medium"
                    data-slot="typography"
                    data-variant="paragraph-mini-medium"
                  >
                    You’ll get a reminder to provide billing details.
                  </span>
                </li>
                <li
                  class="flex items-center gap-2 py-0.5 w-[200px]"
                  data-size="sm"
                  data-slot="list-item"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-circle-check-big size-4 shrink-0 text-badge-dot-success"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21.801 10A10 10 0 1 1 17 3.335"
                    />
                    <path
                      d="m9 11 3 3L22 4"
                    />
                  </svg>
                  <span
                    class="m-0 text-xs leading-4 font-medium"
                    data-slot="typography"
                    data-variant="paragraph-mini-medium"
                  >
                    Your subscription starts. Cancel any time.
                  </span>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="flex flex-col gap-3"
          >
            <div
              class="flex items-center justify-between"
            >
              <p
                class="m-0 text-base leading-6 font-medium"
                data-slot="typography"
                data-variant="paragraph-medium"
              >
                Choose plan
              </p>
              <a
                class="focus-visible:border-ring cursor-pointer focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:aria-invalid:border-destructive/50 rounded-md border border-transparent bg-clip-padding text-sm font-medium focus-visible:ring-[3px] aria-invalid:ring-[3px] [&_svg:not([class*='size-'])]:size-4 inline-flex items-center justify-center whitespace-nowrap transition-all disabled:cursor-not-allowed disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:cursor-not-allowed aria-disabled:opacity-50 [&_svg]:pointer-events-none shrink-0 [&_svg]:shrink-0 outline-none group/button select-none text-muted-foreground hover:bg-muted hover:text-foreground dark:hover:bg-muted/50 aria-expanded:bg-muted aria-expanded:text-foreground h-8 gap-1 px-4 in-data-[slot=button-group]:rounded-sm has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5"
                data-slot="button"
                href="https://safe.global/blog/safe-pro-early-partner-program"
                rel="noopener noreferrer"
                target="_blank"
              >
                Compare all features
                <svg
                  aria-hidden="true"
                  class="lucide lucide-arrow-up-right"
                  data-icon="inline-end"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 7h10v10"
                  />
                  <path
                    d="M7 17 17 7"
                  />
                </svg>
              </a>
            </div>
            <div
              aria-label="Plan"
              class="flex gap-6"
              role="radiogroup"
            >
              <div
                aria-checked="false"
                class="text-card-foreground overflow-hidden text-sm has-[>img:first-child]:pt-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl group/card flex flex-col bg-muted-secondary gap-6 py-6 rounded-lg-xl border-2 border-transparent flex-1 cursor-pointer"
                data-radius="lg-xl"
                data-size="default"
                data-slot="card"
                data-surface="default"
                data-variant="muted-secondary"
                role="radio"
                tabindex="0"
              >
                <div
                  class="px-6 group-data-[size=sm]/card:px-4 group-data-[size=lg]/card:px-8 group-data-[size=none]/card:px-0 flex flex-1 flex-col"
                  data-slot="card-content"
                >
                  <div
                    class="flex h-full flex-col gap-4"
                  >
                    <div
                      class="flex flex-1 flex-col gap-6"
                    >
                      <div
                        class="flex flex-col gap-4"
                      >
                        <div
                          class="flex items-center gap-2"
                        >
                          <p
                            class="m-0 text-lg leading-[27px] font-medium"
                            data-slot="typography"
                            data-variant="paragraph-large-medium"
                          >
                            Starter
                          </p>
                        </div>
                        <div
                          class="flex items-baseline gap-1"
                        >
                          <h4
                            class="m-0 scroll-m-20 text-xl font-semibold leading-6 tracking-normal line-through"
                            data-slot="typography"
                            data-variant="h4"
                          >
                            €149
                          </h4>
                          <p
                            class="m-0 text-base leading-6 font-normal text-muted-foreground"
                            data-slot="typography"
                            data-variant="paragraph"
                          >
                            /mo
                          </p>
                          <p
                            class="m-0 text-lg leading-[27px] font-semibold text-badge-dot-success"
                            data-slot="typography"
                            data-variant="paragraph-large-bold"
                          >
                            Free
                          </p>
                        </div>
                      </div>
                      <div
                        class="flex flex-col gap-4"
                      >
                        <div
                          class="w-full"
                        >
                          <input
                            class="border-border border shadow-none focus-visible:ring-0 focus-visible:border-border aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:aria-invalid:border-destructive/50 rounded-md py-1.5 text-base text-foreground transition-[color,box-shadow] file:h-7 file:text-sm file:font-medium md:text-sm file:text-foreground placeholder:text-muted-foreground w-full min-w-0 outline-none file:inline-flex file:border-0 file:bg-transparent disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 h-9 px-3 bg-input"
                            data-slot="input"
                            id="base-ui-_r_4_"
                            readonly=""
                            value="2 Safe accounts"
                          />
                        </div>
                        <ul
                          class="m-0 flex list-none p-0 flex-col"
                          data-orientation="vertical"
                          data-slot="list"
                        >
                          <li
                            class="flex items-center gap-2 py-0.5"
                            data-size="sm"
                            data-slot="list-item"
                          >
                            <span
                              class="size-10 rounded-full data-[size=sm]:size-8 data-[size=xs]:size-6 group/avatar relative flex shrink-0 select-none"
                              data-size="xs"
                              data-slot="avatar"
                            >
                              <span
                                class="bg-muted text-muted-foreground rounded-full flex size-full items-center justify-center text-sm group-data-[size=sm]/avatar:text-xs group-data-[size=xs]/avatar:text-xs data-[surface=card]:bg-card"
                                data-slot="avatar-fallback"
                                data-surface="muted"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="lucide lucide-check size-4"
                                  fill="none"
                                  height="24"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="1.5"
                                  viewBox="0 0 24 24"
                                  width="24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M20 6 9 17l-5-5"
                                  />
                                </svg>
                              </span>
                            </span>
                            <div
                              class="flex min-w-0 flex-col"
                              data-slot="list-item-text"
                            >
                              <span
                                class="truncate text-sm text-foreground"
                              >
                                10 sponsored transactions / month
                              </span>
                            </div>
                          </li>
                          <li
                            class="flex items-center gap-2 py-0.5"
                            data-size="sm"
                            data-slot="list-item"
                          >
                            <span
                              class="size-10 rounded-full data-[size=sm]:size-8 data-[size=xs]:size-6 group/avatar relative flex shrink-0 select-none"
                              data-size="xs"
                              data-slot="avatar"
                            >
                              <span
                                class="bg-muted text-muted-foreground rounded-full flex size-full items-center justify-center text-sm group-data-[size=sm]/avatar:text-xs group-data-[size=xs]/avatar:text-xs data-[surface=card]:bg-card"
                                data-slot="avatar-fallback"
                                data-surface="muted"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="lucide lucide-check size-4"
                                  fill="none"
                                  height="24"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="1.5"
                                  viewBox="0 0 24 24"
                                  width="24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M20 6 9 17l-5-5"
                                  />
                                </svg>
                              </span>
                            </span>
                            <div
                              class="flex min-w-0 flex-col"
                              data-slot="list-item-text"
                            >
                              <span
                                class="truncate text-sm text-foreground"
                              >
                                Advanced threat analysis
                              </span>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-checked="true"
                class="text-card-foreground overflow-hidden text-sm has-[>img:first-child]:pt-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl group/card flex flex-col bg-muted-secondary gap-6 py-6 rounded-lg-xl border-2 border-mint shadow-lg flex-1 cursor-pointer"
                data-radius="lg-xl"
                data-size="default"
                data-slot="card"
                data-surface="default"
                data-variant="muted-secondary"
                role="radio"
                tabindex="0"
              >
                <div
                  class="px-6 group-data-[size=sm]/card:px-4 group-data-[size=lg]/card:px-8 group-data-[size=none]/card:px-0 flex flex-1 flex-col"
                  data-slot="card-content"
                >
                  <div
                    class="flex h-full flex-col gap-4"
                  >
                    <div
                      class="flex flex-1 flex-col gap-6"
                    >
                      <div
                        class="flex flex-col gap-4"
                      >
                        <div
                          class="flex items-center gap-2"
                        >
                          <p
                            class="m-0 text-lg leading-[27px] font-medium"
                            data-slot="typography"
                            data-variant="paragraph-large-medium"
                          >
                            Business
                          </p>
                        </div>
                        <div
                          class="flex items-baseline gap-1"
                        >
                          <h4
                            class="m-0 scroll-m-20 text-xl font-semibold leading-6 tracking-normal line-through"
                            data-slot="typography"
                            data-variant="h4"
                          >
                            €499
                          </h4>
                          <p
                            class="m-0 text-base leading-6 font-normal text-muted-foreground"
                            data-slot="typography"
                            data-variant="paragraph"
                          >
                            /mo
                          </p>
                          <p
                            class="m-0 text-lg leading-[27px] font-semibold text-badge-dot-success"
                            data-slot="typography"
                            data-variant="paragraph-large-bold"
                          >
                            Free
                          </p>
                        </div>
                      </div>
                      <div
                        class="flex flex-col gap-4"
                      >
                        <button
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          class="data-[placeholder]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:aria-invalid:border-destructive/50 gap-2 text-sm transition-[color,box-shadow] focus-visible:ring-[3px] aria-invalid:ring-[3px] *:data-[slot=select-value]:gap-2 [&_svg:not([class*='size-'])]:size-4 flex items-center justify-between whitespace-nowrap outline-none disabled:cursor-not-allowed disabled:opacity-50 data-disabled:cursor-not-allowed data-disabled:opacity-50 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:items-center [&_svg]:pointer-events-none [&_svg]:shrink-0 border-border hover:bg-muted/50 rounded-md border bg-input px-3 shadow-xs data-[size=default]:min-h-9 py-1.5 w-full"
                          data-size="default"
                          data-slot="select-trigger"
                          id="base-ui-_r_5_"
                          role="combobox"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="flex flex-1 text-left"
                            data-slot="select-value"
                          >
                            10 Safe accounts
                          </span>
                          <span
                            class="flex items-center shrink-0"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-chevron-down text-muted-foreground size-4 pointer-events-none"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="m6 9 6 6 6-6"
                              />
                              ▼
                            </svg>
                          </span>
                        </button>
                        <input
                          aria-hidden="true"
                          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
                          tabindex="-1"
                          value="10 Safe accounts"
                        />
                        <ul
                          class="m-0 flex list-none p-0 flex-col"
                          data-orientation="vertical"
                          data-slot="list"
                        >
                          <li
                            class="flex items-center gap-2 py-0.5"
                            data-size="sm"
                            data-slot="list-item"
                          >
                            <span
                              class="size-10 rounded-full data-[size=sm]:size-8 data-[size=xs]:size-6 group/avatar relative flex shrink-0 select-none"
                              data-size="xs"
                              data-slot="avatar"
                            >
                              <span
                                class="bg-muted text-muted-foreground rounded-full flex size-full items-center justify-center text-sm group-data-[size=sm]/avatar:text-xs group-data-[size=xs]/avatar:text-xs data-[surface=card]:bg-card"
                                data-slot="avatar-fallback"
                                data-surface="muted"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="lucide lucide-check size-4"
                                  fill="none"
                                  height="24"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="1.5"
                                  viewBox="0 0 24 24"
                                  width="24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M20 6 9 17l-5-5"
                                  />
                                </svg>
                              </span>
                            </span>
                            <div
                              class="flex min-w-0 flex-col"
                              data-slot="list-item-text"
                            >
                              <span
                                class="truncate text-sm text-foreground"
                              >
                                50 sponsored transactions / month
                              </span>
                            </div>
                          </li>
                          <li
                            class="flex items-center gap-2 py-0.5"
                            data-size="sm"
                            data-slot="list-item"
                          >
                            <span
                              class="size-10 rounded-full data-[size=sm]:size-8 data-[size=xs]:size-6 group/avatar relative flex shrink-0 select-none"
                              data-size="xs"
                              data-slot="avatar"
                            >
                              <span
                                class="bg-muted text-muted-foreground rounded-full flex size-full items-center justify-center text-sm group-data-[size=sm]/avatar:text-xs group-data-[size=xs]/avatar:text-xs data-[surface=card]:bg-card"
                                data-slot="avatar-fallback"
                                data-surface="muted"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="lucide lucide-check size-4"
                                  fill="none"
                                  height="24"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="1.5"
                                  viewBox="0 0 24 24"
                                  width="24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M20 6 9 17l-5-5"
                                  />
                                </svg>
                              </span>
                            </span>
                            <div
                              class="flex min-w-0 flex-col"
                              data-slot="list-item-text"
                            >
                              <span
                                class="truncate text-sm text-foreground"
                              >
                                Advanced threat analysis
                              </span>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <span
            class="m-0 text-sm leading-5 font-normal block w-full text-center text-muted-foreground"
            data-slot="typography"
            data-variant="paragraph-small"
          >
            Your paid subscription only starts after you add billing details. If you don't add them before the trial ends, your Workspace will be locked. Your Safe accounts remain available outside the Workspace.
          </span>
          <button
            class="focus-visible:border-ring cursor-pointer focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:aria-invalid:border-destructive/50 rounded-md border border-transparent bg-clip-padding text-sm font-medium focus-visible:ring-[3px] aria-invalid:ring-[3px] inline-flex items-center justify-center whitespace-nowrap transition-all disabled:cursor-not-allowed disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:cursor-not-allowed aria-disabled:opacity-50 [&_svg]:pointer-events-none shrink-0 [&_svg]:shrink-0 outline-none group/button select-none bg-primary text-primary-foreground hover:bg-primary/80 disabled:bg-muted disabled:text-muted-foreground aria-disabled:bg-muted aria-disabled:text-muted-foreground disabled:[&_svg]:text-muted-foreground aria-disabled:[&_svg]:text-muted-foreground dark:[&_svg]:text-black dark:disabled:bg-muted dark:disabled:text-muted-foreground dark:aria-disabled:bg-muted dark:aria-disabled:text-muted-foreground dark:disabled:[&_svg]:text-muted-foreground dark:aria-disabled:[&_svg]:text-muted-foreground h-9 gap-2 px-6 [&_svg:not([class*='size-'])]:size-5 self-center"
            data-slot="button"
            tabindex="0"
            type="button"
          >
            Start free trial
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-right text-green-400 dark:text-primary-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="m12 5 7 7-7 7"
              />
            </svg>
          </button>
        </div>
        <button
          class="focus-visible:border-ring cursor-pointer focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:aria-invalid:border-destructive/50 rounded-md border border-transparent bg-clip-padding text-sm font-medium focus-visible:ring-[3px] aria-invalid:ring-[3px] [&_svg:not([class*='size-'])]:size-4 inline-flex items-center justify-center whitespace-nowrap transition-all disabled:cursor-not-allowed disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:cursor-not-allowed aria-disabled:opacity-50 [&_svg]:pointer-events-none shrink-0 [&_svg]:shrink-0 outline-none group/button select-none hover:bg-muted hover:text-foreground dark:hover:bg-muted/50 aria-expanded:bg-muted aria-expanded:text-foreground size-8 in-data-[slot=button-group]:rounded-sm absolute top-4 right-4"
          data-slot="dialog-close"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span
            class="sr-only"
          >
            Close
          </span>
        </button>
      </div>
      <span
        data-base-ui-focus-guard=""
        data-type="inside"
        role="button"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`./StartTrialModal.stories ThirtyDays 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      data-base-ui-portal=""
      data-slot="dialog-portal"
      id="_r_a_"
    >
      <div
        aria-hidden="true"
        data-base-ui-inert=""
        role="presentation"
        style="position: fixed; inset: 0; user-select: none;"
      />
      <div
        aria-hidden="true"
        class="bg-backdrop supports-backdrop-filter:backdrop-blur-xs fixed inset-0 z-[var(--z-overlay)] duration-100 data-open:animate-in data-closed:animate-out data-open:fade-in-0 data-closed:fade-out-0 data-starting-style:opacity-0 data-ending-style:opacity-0 data-closed:pointer-events-none"
        data-base-ui-inert=""
        data-open=""
        data-slot="dialog-overlay"
        role="presentation"
        style="user-select: none;"
      />
      <span
        data-base-ui-focus-guard=""
        data-type="inside"
        role="button"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
      <div
        aria-labelledby="base-ui-_r_b_"
        class="data-open:animate-in data-closed:animate-out data-closed:fade-out-0 data-open:fade-in-0 data-closed:zoom-out-95 data-open:zoom-in-95 data-starting-style:opacity-0 data-ending-style:opacity-0 fixed top-[50%] left-[50%] z-[var(--z-overlay)] w-full -translate-x-1/2 -translate-y-1/2 rounded-xl shadow-lg duration-200 max-w-[764px] p-6 bg-card"
        data-base-ui-focusable=""
        data-open=""
        data-slot="dialog-content"
        id="_r_8_"
        role="dialog"
        style="--nested-dialogs: 0;"
        tabindex="-1"
      >
        <div
          class="flex flex-col gap-6"
        >
          <h2
            class="text-foreground m-0 scroll-m-20 text-2xl font-semibold leading-[28.8px] tracking-normal"
            data-slot="typography"
            data-variant="h3"
            id="base-ui-_r_b_"
          >
            Start your 
            30
            -day free trial of Safe Pro
          </h2>
          <div
            class="text-card-foreground overflow-hidden text-sm has-[>img:first-child]:pt-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl group/card flex flex-col bg-muted-secondary bg-[linear-gradient(90deg,color-mix(in_srgb,var(--mint)_40%,var(--muted-secondary)),color-mix(in_srgb,var(--mint)_8%,var(--muted-secondary)))] gap-4 py-4 rounded-lg"
            data-radius="lg"
            data-size="sm"
            data-slot="card"
            data-surface="default"
            data-variant="brand"
          >
            <div
              class="px-6 group-data-[size=sm]/card:px-4 group-data-[size=lg]/card:px-8 group-data-[size=none]/card:px-0"
              data-slot="card-content"
            >
              <ul
                class="m-0 flex list-none p-0 flex-row gap-4 justify-between"
                data-orientation="horizontal"
                data-slot="list"
              >
                <li
                  class="flex items-center gap-2 py-0.5 w-[200px]"
                  data-size="sm"
                  data-slot="list-item"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-lock-keyhole-open size-4 shrink-0 text-badge-dot-success"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="16"
                      r="1"
                    />
                    <rect
                      height="12"
                      rx="2"
                      width="18"
                      x="3"
                      y="10"
                    />
                    <path
                      d="M7 10V7a5 5 0 0 1 9.33-2.5"
                    />
                  </svg>
                  <span
                    class="m-0 text-xs leading-4 font-medium"
                    data-slot="typography"
                    data-variant="paragraph-mini-medium"
                  >
                    All Pro features unlocked, no billing details needed upfront.
                  </span>
                </li>
                <li
                  class="flex items-center gap-2 py-0.5 w-[200px]"
                  data-size="sm"
                  data-slot="list-item"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-bell-ring size-4 shrink-0 text-badge-dot-success"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.268 21a2 2 0 0 0 3.464 0"
                    />
                    <path
                      d="M22 8c0-2.3-.8-4.3-2-6"
                    />
                    <path
                      d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
                    />
                    <path
                      d="M4 2C2.8 3.7 2 5.7 2 8"
                    />
                  </svg>
                  <span
                    class="m-0 text-xs leading-4 font-medium"
                    data-slot="typography"
                    data-variant="paragraph-mini-medium"
                  >
                    You’ll get a reminder to provide billing details.
                  </span>
                </li>
                <li
                  class="flex items-center gap-2 py-0.5 w-[200px]"
                  data-size="sm"
                  data-slot="list-item"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-circle-check-big size-4 shrink-0 text-badge-dot-success"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21.801 10A10 10 0 1 1 17 3.335"
                    />
                    <path
                      d="m9 11 3 3L22 4"
                    />
                  </svg>
                  <span
                    class="m-0 text-xs leading-4 font-medium"
                    data-slot="typography"
                    data-variant="paragraph-mini-medium"
                  >
                    Your subscription starts. Cancel any time.
                  </span>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="flex flex-col gap-3"
          >
            <div
              class="flex items-center justify-between"
            >
              <p
                class="m-0 text-base leading-6 font-medium"
                data-slot="typography"
                data-variant="paragraph-medium"
              >
                Choose plan
              </p>
              <a
                class="focus-visible:border-ring cursor-pointer focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:aria-invalid:border-destructive/50 rounded-md border border-transparent bg-clip-padding text-sm font-medium focus-visible:ring-[3px] aria-invalid:ring-[3px] [&_svg:not([class*='size-'])]:size-4 inline-flex items-center justify-center whitespace-nowrap transition-all disabled:cursor-not-allowed disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:cursor-not-allowed aria-disabled:opacity-50 [&_svg]:pointer-events-none shrink-0 [&_svg]:shrink-0 outline-none group/button select-none text-muted-foreground hover:bg-muted hover:text-foreground dark:hover:bg-muted/50 aria-expanded:bg-muted aria-expanded:text-foreground h-8 gap-1 px-4 in-data-[slot=button-group]:rounded-sm has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5"
                data-slot="button"
                href="https://safe.global/blog/safe-pro-early-partner-program"
                rel="noopener noreferrer"
                target="_blank"
              >
                Compare all features
                <svg
                  aria-hidden="true"
                  class="lucide lucide-arrow-up-right"
                  data-icon="inline-end"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 7h10v10"
                  />
                  <path
                    d="M7 17 17 7"
                  />
                </svg>
              </a>
            </div>
            <div
              aria-label="Plan"
              class="flex gap-6"
              role="radiogroup"
            >
              <div
                aria-checked="false"
                class="text-card-foreground overflow-hidden text-sm has-[>img:first-child]:pt-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl group/card flex flex-col bg-muted-secondary gap-6 py-6 rounded-lg-xl border-2 border-transparent flex-1 cursor-pointer"
                data-radius="lg-xl"
                data-size="default"
                data-slot="card"
                data-surface="default"
                data-variant="muted-secondary"
                role="radio"
                tabindex="0"
              >
                <div
                  class="px-6 group-data-[size=sm]/card:px-4 group-data-[size=lg]/card:px-8 group-data-[size=none]/card:px-0 flex flex-1 flex-col"
                  data-slot="card-content"
                >
                  <div
                    class="flex h-full flex-col gap-4"
                  >
                    <div
                      class="flex flex-1 flex-col gap-6"
                    >
                      <div
                        class="flex flex-col gap-4"
                      >
                        <div
                          class="flex items-center gap-2"
                        >
                          <p
                            class="m-0 text-lg leading-[27px] font-medium"
                            data-slot="typography"
                            data-variant="paragraph-large-medium"
                          >
                            Starter
                          </p>
                        </div>
                        <div
                          class="flex items-baseline gap-1"
                        >
                          <h4
                            class="m-0 scroll-m-20 text-xl font-semibold leading-6 tracking-normal line-through"
                            data-slot="typography"
                            data-variant="h4"
                          >
                            €149
                          </h4>
                          <p
                            class="m-0 text-base leading-6 font-normal text-muted-foreground"
                            data-slot="typography"
                            data-variant="paragraph"
                          >
                            /mo
                          </p>
                          <p
                            class="m-0 text-lg leading-[27px] font-semibold text-badge-dot-success"
                            data-slot="typography"
                            data-variant="paragraph-large-bold"
                          >
                            Free
                          </p>
                        </div>
                      </div>
                      <div
                        class="flex flex-col gap-4"
                      >
                        <div
                          class="w-full"
                        >
                          <input
                            class="border-border border shadow-none focus-visible:ring-0 focus-visible:border-border aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:aria-invalid:border-destructive/50 rounded-md py-1.5 text-base text-foreground transition-[color,box-shadow] file:h-7 file:text-sm file:font-medium md:text-sm file:text-foreground placeholder:text-muted-foreground w-full min-w-0 outline-none file:inline-flex file:border-0 file:bg-transparent disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 h-9 px-3 bg-input"
                            data-slot="input"
                            id="base-ui-_r_c_"
                            readonly=""
                            value="2 Safe accounts"
                          />
                        </div>
                        <ul
                          class="m-0 flex list-none p-0 flex-col"
                          data-orientation="vertical"
                          data-slot="list"
                        >
                          <li
                            class="flex items-center gap-2 py-0.5"
                            data-size="sm"
                            data-slot="list-item"
                          >
                            <span
                              class="size-10 rounded-full data-[size=sm]:size-8 data-[size=xs]:size-6 group/avatar relative flex shrink-0 select-none"
                              data-size="xs"
                              data-slot="avatar"
                            >
                              <span
                                class="bg-muted text-muted-foreground rounded-full flex size-full items-center justify-center text-sm group-data-[size=sm]/avatar:text-xs group-data-[size=xs]/avatar:text-xs data-[surface=card]:bg-card"
                                data-slot="avatar-fallback"
                                data-surface="muted"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="lucide lucide-check size-4"
                                  fill="none"
                                  height="24"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="1.5"
                                  viewBox="0 0 24 24"
                                  width="24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M20 6 9 17l-5-5"
                                  />
                                </svg>
                              </span>
                            </span>
                            <div
                              class="flex min-w-0 flex-col"
                              data-slot="list-item-text"
                            >
                              <span
                                class="truncate text-sm text-foreground"
                              >
                                10 sponsored transactions / month
                              </span>
                            </div>
                          </li>
                          <li
                            class="flex items-center gap-2 py-0.5"
                            data-size="sm"
                            data-slot="list-item"
                          >
                            <span
                              class="size-10 rounded-full data-[size=sm]:size-8 data-[size=xs]:size-6 group/avatar relative flex shrink-0 select-none"
                              data-size="xs"
                              data-slot="avatar"
                            >
                              <span
                                class="bg-muted text-muted-foreground rounded-full flex size-full items-center justify-center text-sm group-data-[size=sm]/avatar:text-xs group-data-[size=xs]/avatar:text-xs data-[surface=card]:bg-card"
                                data-slot="avatar-fallback"
                                data-surface="muted"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="lucide lucide-check size-4"
                                  fill="none"
                                  height="24"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="1.5"
                                  viewBox="0 0 24 24"
                                  width="24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M20 6 9 17l-5-5"
                                  />
                                </svg>
                              </span>
                            </span>
                            <div
                              class="flex min-w-0 flex-col"
                              data-slot="list-item-text"
                            >
                              <span
                                class="truncate text-sm text-foreground"
                              >
                                Advanced threat analysis
                              </span>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-checked="true"
                class="text-card-foreground overflow-hidden text-sm has-[>img:first-child]:pt-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl group/card flex flex-col bg-muted-secondary gap-6 py-6 rounded-lg-xl border-2 border-mint shadow-lg flex-1 cursor-pointer"
                data-radius="lg-xl"
                data-size="default"
                data-slot="card"
                data-surface="default"
                data-variant="muted-secondary"
                role="radio"
                tabindex="0"
              >
                <div
                  class="px-6 group-data-[size=sm]/card:px-4 group-data-[size=lg]/card:px-8 group-data-[size=none]/card:px-0 flex flex-1 flex-col"
                  data-slot="card-content"
                >
                  <div
                    class="flex h-full flex-col gap-4"
                  >
                    <div
                      class="flex flex-1 flex-col gap-6"
                    >
                      <div
                        class="flex flex-col gap-4"
                      >
                        <div
                          class="flex items-center gap-2"
                        >
                          <p
                            class="m-0 text-lg leading-[27px] font-medium"
                            data-slot="typography"
                            data-variant="paragraph-large-medium"
                          >
                            Business
                          </p>
                        </div>
                        <div
                          class="flex items-baseline gap-1"
                        >
                          <h4
                            class="m-0 scroll-m-20 text-xl font-semibold leading-6 tracking-normal line-through"
                            data-slot="typography"
                            data-variant="h4"
                          >
                            €499
                          </h4>
                          <p
                            class="m-0 text-base leading-6 font-normal text-muted-foreground"
                            data-slot="typography"
                            data-variant="paragraph"
                          >
                            /mo
                          </p>
                          <p
                            class="m-0 text-lg leading-[27px] font-semibold text-badge-dot-success"
                            data-slot="typography"
                            data-variant="paragraph-large-bold"
                          >
                            Free
                          </p>
                        </div>
                      </div>
                      <div
                        class="flex flex-col gap-4"
                      >
                        <button
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          class="data-[placeholder]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:aria-invalid:border-destructive/50 gap-2 text-sm transition-[color,box-shadow] focus-visible:ring-[3px] aria-invalid:ring-[3px] *:data-[slot=select-value]:gap-2 [&_svg:not([class*='size-'])]:size-4 flex items-center justify-between whitespace-nowrap outline-none disabled:cursor-not-allowed disabled:opacity-50 data-disabled:cursor-not-allowed data-disabled:opacity-50 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:items-center [&_svg]:pointer-events-none [&_svg]:shrink-0 border-border hover:bg-muted/50 rounded-md border bg-input px-3 shadow-xs data-[size=default]:min-h-9 py-1.5 w-full"
                          data-size="default"
                          data-slot="select-trigger"
                          id="base-ui-_r_d_"
                          role="combobox"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="flex flex-1 text-left"
                            data-slot="select-value"
                          >
                            10 Safe accounts
                          </span>
                          <span
                            class="flex items-center shrink-0"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-chevron-down text-muted-foreground size-4 pointer-events-none"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="m6 9 6 6 6-6"
                              />
                              ▼
                            </svg>
                          </span>
                        </button>
                        <input
                          aria-hidden="true"
                          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
                          tabindex="-1"
                          value="10 Safe accounts"
                        />
                        <ul
                          class="m-0 flex list-none p-0 flex-col"
                          data-orientation="vertical"
                          data-slot="list"
                        >
                          <li
                            class="flex items-center gap-2 py-0.5"
                            data-size="sm"
                            data-slot="list-item"
                          >
                            <span
                              class="size-10 rounded-full data-[size=sm]:size-8 data-[size=xs]:size-6 group/avatar relative flex shrink-0 select-none"
                              data-size="xs"
                              data-slot="avatar"
                            >
                              <span
                                class="bg-muted text-muted-foreground rounded-full flex size-full items-center justify-center text-sm group-data-[size=sm]/avatar:text-xs group-data-[size=xs]/avatar:text-xs data-[surface=card]:bg-card"
                                data-slot="avatar-fallback"
                                data-surface="muted"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="lucide lucide-check size-4"
                                  fill="none"
                                  height="24"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="1.5"
                                  viewBox="0 0 24 24"
                                  width="24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M20 6 9 17l-5-5"
                                  />
                                </svg>
                              </span>
                            </span>
                            <div
                              class="flex min-w-0 flex-col"
                              data-slot="list-item-text"
                            >
                              <span
                                class="truncate text-sm text-foreground"
                              >
                                50 sponsored transactions / month
                              </span>
                            </div>
                          </li>
                          <li
                            class="flex items-center gap-2 py-0.5"
                            data-size="sm"
                            data-slot="list-item"
                          >
                            <span
                              class="size-10 rounded-full data-[size=sm]:size-8 data-[size=xs]:size-6 group/avatar relative flex shrink-0 select-none"
                              data-size="xs"
                              data-slot="avatar"
                            >
                              <span
                                class="bg-muted text-muted-foreground rounded-full flex size-full items-center justify-center text-sm group-data-[size=sm]/avatar:text-xs group-data-[size=xs]/avatar:text-xs data-[surface=card]:bg-card"
                                data-slot="avatar-fallback"
                                data-surface="muted"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="lucide lucide-check size-4"
                                  fill="none"
                                  height="24"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="1.5"
                                  viewBox="0 0 24 24"
                                  width="24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M20 6 9 17l-5-5"
                                  />
                                </svg>
                              </span>
                            </span>
                            <div
                              class="flex min-w-0 flex-col"
                              data-slot="list-item-text"
                            >
                              <span
                                class="truncate text-sm text-foreground"
                              >
                                Advanced threat analysis
                              </span>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <span
            class="m-0 text-sm leading-5 font-normal block w-full text-center text-muted-foreground"
            data-slot="typography"
            data-variant="paragraph-small"
          >
            Your paid subscription only starts after you add billing details. If you don't add them before the trial ends, your Workspace will be locked. Your Safe accounts remain available outside the Workspace.
          </span>
          <button
            class="focus-visible:border-ring cursor-pointer focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:aria-invalid:border-destructive/50 rounded-md border border-transparent bg-clip-padding text-sm font-medium focus-visible:ring-[3px] aria-invalid:ring-[3px] inline-flex items-center justify-center whitespace-nowrap transition-all disabled:cursor-not-allowed disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:cursor-not-allowed aria-disabled:opacity-50 [&_svg]:pointer-events-none shrink-0 [&_svg]:shrink-0 outline-none group/button select-none bg-primary text-primary-foreground hover:bg-primary/80 disabled:bg-muted disabled:text-muted-foreground aria-disabled:bg-muted aria-disabled:text-muted-foreground disabled:[&_svg]:text-muted-foreground aria-disabled:[&_svg]:text-muted-foreground dark:[&_svg]:text-black dark:disabled:bg-muted dark:disabled:text-muted-foreground dark:aria-disabled:bg-muted dark:aria-disabled:text-muted-foreground dark:disabled:[&_svg]:text-muted-foreground dark:aria-disabled:[&_svg]:text-muted-foreground h-9 gap-2 px-6 [&_svg:not([class*='size-'])]:size-5 self-center"
            data-slot="button"
            tabindex="0"
            type="button"
          >
            Start free trial
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-right text-green-400 dark:text-primary-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="m12 5 7 7-7 7"
              />
            </svg>
          </button>
        </div>
        <button
          class="focus-visible:border-ring cursor-pointer focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:aria-invalid:border-destructive/50 rounded-md border border-transparent bg-clip-padding text-sm font-medium focus-visible:ring-[3px] aria-invalid:ring-[3px] [&_svg:not([class*='size-'])]:size-4 inline-flex items-center justify-center whitespace-nowrap transition-all disabled:cursor-not-allowed disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:cursor-not-allowed aria-disabled:opacity-50 [&_svg]:pointer-events-none shrink-0 [&_svg]:shrink-0 outline-none group/button select-none hover:bg-muted hover:text-foreground dark:hover:bg-muted/50 aria-expanded:bg-muted aria-expanded:text-foreground size-8 in-data-[slot=button-group]:rounded-sm absolute top-4 right-4"
          data-slot="dialog-close"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span
            class="sr-only"
          >
            Close
          </span>
        </button>
      </div>
      <span
        data-base-ui-focus-guard=""
        data-type="inside"
        role="button"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;
